# WebRpc

./: .gitignore  README.md  pyproject.toml
examples/: client.py  server.py  ws.js
web_rpc_sdk/: __init__.py  cli.py  client.py  models.py  server.py
